--- a/static/index.html
+++ b/static/index.html
@@ -34,8 +34,8 @@
         <a href="https://github.com/sillyangel/F3ngine/raw/main/LICENSE" style="margin-left: auto">License</a>
         <span>F3ngine 🄯 Sillyangel 2022</span>
     </footer>
-    <script src="uv/uv.bundle.js"></script>
-    <script src="uv/uv.config.js"></script>
+    <script src="core/uv.bundle.js"></script>
+    <script src="core/uv.config.js"></script>
     <script src="index.js"></script>
 </body>
 
