--- a/static/update/index.html
+++ b/static/update/index.html
@@ -11,26 +11,18 @@
         <link href="index.css" rel="stylesheet">
     </head>
     <body>
-        <div title="F3ngine Logo" class="logo-wrapper">
-            <img class="logo" src="assets/logo.png"
-                alt="Logo" />
-            <h1 title="F3ngine uses TitaniumNetwork's script">F3ngine | BC</h1>
-        </div>
-        <div class="desc">
-        </div>
-        <form>
-            <input placeholder="Search the web freely">
-        </form>
-        <footer>
-            <a href="https://github.com/sillyangel">Sillyangel</a>
-            <a href="https://discord.gg/unblock">TN's Discord</a>
-            <a href="https://github.com/tomphttp">TOMP</a>
-            <a href="https://github.com/sillyangel/F3ngine">GitHub</a>
-            <a href="https://github.com/sillyangel/F3ngine/raw/main/LICENSE" style="margin-left: auto">License</a>
-            <span>F3ngine 🄯 Sillyangel 2022</span>
-        </footer>
-        <script src="core/uv.bundle.js"></script>
-        <script src="core/uv.config.js"></script>
-        <script src="index.js"></script>
+    <div class="s132">
+    <form>
+    <div class="inner-form">
+    <div class="input-field second-wrap">
+    <input placeholder="Search the web freely">
+    </div>
+    </div>
+    </form>
+    </div>    
+        <script src="../core/uv.bundle.js"></script>
+        <script src="../core/uv.config.js"></script>
+        <script src="../index.js"></script>
     </body>
-</html>
+    </html>
+    
